--- a/css/appBootstrap.css
+++ b/css/appBootstrap.css
@@ -50,12 +50,9 @@ input[type=button], input[type=submit] {
   font-size: 1rem;
   width: 50%;
   height: 2.375rem;
-  margin: 0.2rem!important;
-  background: none!important;
 }
-input {
+form input, .custom-select {
   margin: 0.2rem!important;
-  background: none!important;
 }
 /*Here begins the construction style of the table with the data from the dataBase*/
 table {
