--- a/css/appBootstrap.css
+++ b/css/appBootstrap.css
@@ -30,7 +30,7 @@ form {
   align-items: center;
   background: #FAFAFA;
   border-radius: 12px;
-  box-shadow: 0px 1px 12px #FAFAFA99;
+  box-shadow: 0px 1px 12px #FAFAFA66;
 }
 .containerInput {
   width: 90%;
@@ -44,7 +44,7 @@ input[type=button], input[type=submit] {
   margin: 0.3rem;
 }
 .confirmRegister {
-  margin-top: 1.2rem;
+  margin-top: 3rem;
 }
 .custom-select {
   font-size: 1rem;
@@ -53,6 +53,10 @@ input[type=button], input[type=submit] {
 }
 form input, .custom-select {
   margin: 0.2rem!important;
+  height: 3rem!important;
+}
+.dropdown-content {
+  max-height: 200px;
 }
 /*Here begins the construction style of the table with the data from the dataBase*/
 table {
