--- a/css/appBootstrap.css
+++ b/css/appBootstrap.css
@@ -6,7 +6,7 @@
   padding: 0;
 }
 #app {
-  height: 100%;
+  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -61,6 +61,8 @@ form input, .custom-select {
 /*Here begins the construction style of the table with the data from the dataBase*/
 table {
   position: relative;
+  max-height: 50%!important;
+  overflow-y: scroll;
   width: 40rem!important;
   font-size: 1.2rem;
   background: #F6F6F6;
